# aw-qt

./: .gitignore  .travis.yml  Makefile  README.md  aw-qt.desktop  aw-qt.spec  build.bat  build.ps1  build.sh  config-autostart.sh  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  codeql.yml
aw_qt/: __init__.py  __main__.py  config.py  main.py  manager.py  resources.qrc  trayicon.py  webview.py
aw_qt/gui/: __init__.py  logviewer.py  trayicon.py
scripts/: build.sh  config-autostart.sh
tests/: integration_tests.py  test_manager.py
