[tool.poetry]
name = "aw-qt"
version = "0.1.0"
description = "Trayicon for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
include = ["aw_qt/resources.py"]  # resources.py is in .gitignore and generated before build
packages = [
    { include = "aw_qt" },
]

[tool.poetry.scripts]
aw-qt = "aw_qt:main"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
aw-core = "^0.5"
PyQt5 = "5.15.6"
pyobjc-framework-Cocoa = { version = "*", platform = "darwin" }
click = "*"

# For some reason, importlib-metadata is being uninstalled in the bundle repo CI
# (despite needed by flask in aw-server for Python <3.10)
importlib-metadata = {version = "*", python = "<3.10"}

# provides pkg_resources, needed for pyinstaller for some reason
setuptools = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
PyQt5-stubs = "~5.14"  # 5.15 not released yet
flake8 = "*"
pyinstaller = ">=5.1"
types-click = "*"

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.resources"
ignore_errors = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
